Kubernetes/resumebucket.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: resumebucket-k8s
---
apiVersion: v1
kind: Service
metadata:
  name: resumebucket-service
  namespace: resumebucket-k8s
  labels:
     app: resumebucket
spec:
  selector:
    app: resumebucket
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resumebucket-deployment
  namespace: resumebucket-k8s
  labels:
    app: resumebucket
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: resumebucket
  template:
    metadata:
      labels:
        app: resumebucket
    spec:
      containers:
      - name: resumebucket
        image: eftmk/resumebucket:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 8080
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests:
            memory: "256Mi"
            cpu: "500m"
